Bug 321803 - Calculator runner yields 0, if I type greek letters
Summary: Calculator runner yields 0, if I type greek letters
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: calculator (other bugs)
Version First Reported In: 4.11.97
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-30 21:25 UTC by Antonis G.
Modified: 2014-03-09 19:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis G. 2013-06-30 21:25:11 UTC
After I upgraded to 4.11 beta, typing into krunner in greek, will result in calculator returning 0. English are not affected.

Reproducible: Always

Steps to Reproduce:
1.Type in field anything such as "ασδφ"
Actual Results:  
Calculator runner returns 0


Also tested on archlinux, same behaviour.
Comment 1 Antonis G. 2013-07-01 09:30:20 UTC
Complementary screenshot: http://i.imgur.com/tzge1fI.png
Comment 2 Antonis G. 2013-12-09 20:20:17 UTC
Still present in kde 4.11.97 ...
Comment 3 Neofytos Kolokotronis 2013-12-10 00:09:38 UTC
I can replicate here on Chakra, KDE SC 4.11.3. 
krunner should not launch a calculator result in this case, cause one is simply typing letters.
Comment 4 Christoph Feck 2014-01-01 17:03:02 UTC
Git commit efbfaf681cd49994858b364155cd2b42a5c6d963 by Christoph Feck.
Committed on 01/01/2014 at 17:01.
Pushed by cfeck into branch 'KDE/4.11'.

Replace regexp with explicit character category check

Fixes calculator appearing when entering non-latin characters.
FIXED-IN: 4.11.5
REVIEW: 114746

M  +16   -5    plasma/generic/runners/calculator/calculatorrunner.cpp
M  +0    -3    plasma/generic/runners/calculator/calculatorrunner.h

http://commits.kde.org/kde-workspace/efbfaf681cd49994858b364155cd2b42a5c6d963
Comment 5 Antonis G. 2014-03-09 17:44:32 UTC
First thannks for taking time to fix the bug, its very much appreciated.
Though its not quite fixed yet, I can trick it by starting my query with numbers like "12ασδφ" in this case it will just ignore the letters and output the result. Say (2ασδφ+2 returns 4) (noticed while using the unit convert runner). Here is real world example "1 λίβρα σε κιλά" (1 pound as kg) returns 1.
Comment 6 Antonis G. 2014-03-09 19:32:20 UTC
Oups, I forgot I changed distro (Netrunner 13.12) and it provides kde-workspace 4.11.2, oddly their packages are named 4.11.99!? So it doesnt contain the fix. Sorry for the noice.