Replace regexp with explicit character category check

Fixes calculator appearing when entering non-latin characters.

BUG: 321803
FIXED-IN: 4.11.5
REVIEW: 114746